tests/functional/lang/eval-fail-bad-antiquote-3.err.exp
error:
       … while evaluating a path segment

         at /pwd/lang/eval-fail-bad-antiquote-3.nix:1:3:

            1| ''${x: x}''
             |   ^
            2|

       error: cannot coerce a function to a string
